<resources>
    <string name="app_name">UserLoginSample</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="registration">регистрация</string>
    <string name="IncorectPasswordError">Некоректный пароль! Пароль должен состоять из не менее 5 любых символов без пробелов</string>
    <string name="LoginIncorrectError">Логин должен состоять не менее чем из 4 символов и начинаться с не цифрового символа</string>
    <string name="userNotFound">ERROR указанный пользователь не найден</string>
    <string name="AuthSuccessMessage">Авторизация прошла успешно</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="repo">Репозитории</string>
    <string name="event_bus">Event Bus</string>
</resources>